css/parser/tests/errors/strings/eof-double-quotes/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/strings/eof-double-quotes/input.css:2:16
  |
2 |   prop: "string
  |                ^

